Удаление лишних строк и Fix метода